/*
 * Copyright 2023 The BFIA Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package org.ppc.grpc_ptp;

option go_package = "github.com/secretflow/kuscia/transport/proto/grpcPtp";

message TransportOutbound {
  bytes payload = 1;                  // 二进制报文
  string code = 2;                    // 状态码
  string message = 3;                 // 状态说明
}

message TransportInbound{}

message InvokeTransportInbound{
  bytes msg = 1;
}


service Transport{
  rpc Pop(TransportInbound) returns (TransportOutbound);
  rpc Peek(TransportInbound) returns (TransportOutbound);
  rpc Release(TransportInbound) returns (TransportOutbound);
  rpc Invoke(InvokeTransportInbound) returns (TransportOutbound);
}
